Core API boilerplate: FastAPI service with input validation and API key

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-
----
-
-### `requirements.txt`
-```txt
 fastapi
 uvicorn[standard]
-pydantic
+pydantic==2.11.2
 langchain
 guardrails-ai
 faiss-cpu
 transformers
 torch
 prometheus-client
+lxml==6.0.1
